Ajoute index.html ak manifest.json

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#000000" />
-  <title>TF-Stream Explorer</title>
+  <title>TF-Tout</title>
 
   <!-- PWA manifest et icônes -->
   <link rel="manifest" href="manifest.json" />
@@ -60,7 +60,7 @@
 <body>
 
   <div class="header">
-    <div class="logo">TF-Stream</div>
+    <div class="logo">TF-Tout</div>
     <div class="search-container">
       <input class="search-box" placeholder="Rechèch..." oninput="filterSearch(this.value)">
     </div>
