--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#000000" />
-  <title>TF-Stream Explorer</title>  <!-- PWA manifest et icônes -->  <link rel="manifest" href="manifest.json" />
+  <title>Adam_D'H7</title>  <!-- PWA manifest et icônes -->  <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/jpeg" href="https://files.catbox.moe/ixgmht.jpg" />
   <link rel="apple-touch-icon" href="https://files.catbox.moe/ixgmht.jpg" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -37,7 +37,7 @@
     #miniAd button{position:absolute;top:2px;right:2px;background:rgba(0,0,0,0.5);border:none;color:#fff;font-size:12px;cursor:pointer;padding:2px 4px;}
   </style></head>
 <body>  <div class="header">
-    <div class="logo">TF-Stream</div>
+    <div class="logo">Adam_D'H7</div>
     <div class="search-container">
       <input class="search-box" placeholder="Rechèch..." oninput="filterSearch(this.value)">
     </div>
@@ -49,7 +49,8 @@
   </div>  <!-- Mini rotating ad -->  <div id="miniAd">
     <button id="closeMiniAd">×</button>
     <iframe id="miniAdFrame" src="" allowfullscreen></iframe>
-  </div>  <script>
+  </div>
+  <script>
     const AD_REDIRECT_URL = "https://www.profitableratecpm.com/avzy4dviv?key=537eddf372aea1f2944a98fcd202d302";
     let adCallback = null, skipTimeout;
 
@@ -143,11 +144,11 @@
             s = document.createElement("div");
       s.className = "social-section";
       s.innerHTML = `
-        <a href="https://facebook.com" target="_blank"><img src="https://img.icons8.com/?size=100&id=118467&format=png&color=ffffff"/></a>
-        <a href="mailto:tfstream7@gmail.com"><img src="https://img.icons8.com/?size=100&id=Y2GfpkgYNp42&format=png&color=ffffff"/></a>
-        <a href="https://whatsapp.com" target="_blank"><img src="https://img.icons8.com/?size=100&id=16733&format=png&color=ffffff"/></a>
-        <a href="https://instagram.com" target="_blank"><img src="https://img.icons8.com/?size=100&id=32309&format=png&color=ffffff"/></a>
-        <a href="https://youtube.com" target="_blank"><img src="https://img.icons8.com/?size=100&id=37326&format=png&color=ffffff"/></a>
+        <a href="https://www.facebook.com/profile.php?id=61578852256333" target="_blank"><img src="https://img.icons8.com/?size=100&id=118467&format=png&color=ffffff"/></a>
+        <a href="mailto:dhaitiadam@gmail.com"><img src="https://img.icons8.com/?size=100&id=Y2GfpkgYNp42&format=png&color=ffffff"/></a>
+        <a href="https://whatsapp.com/channel/0029Vb6WLps7oQhWrUlyPQ2m" target="_blank"><img src="https://img.icons8.com/?size=100&id=16733&format=png&color=ffffff"/></a>
+        <a href="https://www.instagram.com/adam_dhaiti/" target="_blank"><img src="https://img.icons8.com/?size=100&id=32309&format=png&color=ffffff"/></a>
+        <a href="https://youtube.com/@adam_dhaiti?si=f_29jvZi6c1mJaBO" target="_blank"><img src="https://img.icons8.com/?size=100&id=37326&format=png&color=ffffff"/></a>
       `;
       c.appendChild(s);
     }
@@ -168,5 +169,6 @@
       clearTimeout(skipTimeout);
       if (typeof adCallback === "function") adCallback();
     }
-  </script></body>
+  </script>
+ </body>
 </html>
