--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </div>
 
   <script>
-    const AD_REDIRECT_URL = "https://www.profitableratecpm.com/avzy4dviv?key=537eddf372aea1f2944a98fcd202d302";
+    const AD_REDIRECT_URL = "https://www.revenuecpmgate.com/jhf4rw2iqm?key=7fbc359e784e5a84aaff45865b68dce4";
     let adCallback = null, skipTimeout;
 
     // miniAd rotation
