--- a/index.html
+++ b/index.html
@@ -1,1 +1,438 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="theme-color" content="#000000" />
+  <title>Adam_D'H7</title>
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" type="image/jpeg" href="https://res.cloudinary.com/dckwrqrur/image/upload/v1757205404/tf-stream-url/Screenshot_20250906_202106_Chrome_go9vhu.jpg" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    :root{
+      --card-max-width:920px;
+      --card-min-height:80px;
+      --card-max-height:80vh;
+      --mini-w:100px;
+      --mini-h:70px;
+    }
+    html,body{height:100%;}
+    body{
+      margin:0;
+      background:#000;
+      color:#fff;
+      font-family:'Roboto',sans-serif;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding-bottom:60px;
+    }
+
+    .header{ padding:18px 16px; text-align:center; position:sticky; top:0; backdrop-filter: blur(10px); background: rgba(0,0,0,0.7); z-index:10; }
+    .logo{ font-size:26px; font-weight:700; background:linear-gradient(90deg,#fff,#000); -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
+    .search-container{ display:flex; justify-content:center; padding:8px 20px; }
+    .search-box{ width:100%; max-width:500px; background:#1c1c1e; border:none; padding:10px 14px; border-radius:12px; color:#fff; font-size:15px; outline:none; }
+
+    #explorerView{ padding:18px; max-height:calc(100vh - 120px); overflow-y:auto; background:#000; -webkit-overflow-scrolling:touch; }
+
+    .post-card{ background:#111; border-radius:14px; padding:14px; margin-bottom:18px; box-shadow:0 2px 8px rgba(0,0,0,0.7); }
+    .post-name{ font-weight:700; font-size:16px; margin:8px 0; color:#fff; text-align:left; }
+    .post-text{ font-size:14px; color:#ddd; margin-bottom:10px; white-space:pre-wrap; text-align:left; }
+    .post-desc{ font-size:13px; color:#ccc; margin-top:8px; text-align:left; }
+
+    .media-wrap{ text-align:center; margin: 0 0 10px 0; }
+
+    .post-thumb-container {
+      position:relative;
+      display:inline-block;
+      box-sizing:border-box;
+      max-width:var(--card-max-width);
+      width:auto;
+      background:#000;
+      border-radius:12px;
+      overflow:hidden;
+      padding:0;
+      box-shadow: inset 0 0 18px rgba(0,0,0,0.45), 0 6px 18px rgba(0,0,0,0.6);
+      min-height:var(--card-min-height);
+      max-height:var(--card-max-height);
+    }
+
+    .post-thumb, .post-thumb img, .post-thumb video, .post-thumb iframe { display:block; width:auto; max-width:100%; height:auto; max-height:calc(var(--card-max-height)); object-fit:contain; background:#000; border-radius:0; }
+    .post-thumb iframe, .post-thumb video { display:block; width:100%; height:auto; }
+
+    .social-section{ margin-top:10px; padding-top:10px; border-top:1px solid #333; display:flex; justify-content:center; gap:18px; flex-wrap:wrap; }
+    .social-section a{ color:#fff; text-decoration:none; display:inline-flex; align-items:center; justify-content:center; width:44px; height:44px; border-radius:10px; background:rgba(255,255,255,0.03); }
+    .social-section i{ font-size:18px; }
+
+    .ad-overlay{ position:fixed; inset:0; background:rgba(0,0,0,0.9); display:none; justify-content:center; align-items:center; z-index:10000; }
+    .ad-container{ position:relative; max-width:90%; width:100%; height:80%; background:#111; padding:0; border-radius:10px; overflow:hidden; }
+    .ad-container iframe{ width:100%; height:100%; border:none; background:#000; }
+    .skip-btn{ position:absolute; top:10px; right:10px; background:rgba(0,0,0,0.5); border:none; color:#fff; padding:8px 12px; border-radius:6px; cursor:pointer; display:none; z-index:1001; }
+
+    /* MINI-CARD removed */
+
+    @media (max-width:600px) {
+      :root { --mini-w:86px; --mini-h:62px; }
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <div class="logo">Adam_D'H7</div>
+    <div class="search-container">
+      <input id="searchBox" class="search-box" placeholder="Rechèch..." oninput="filterSearch(this.value)">
+    </div>
+  </div>
+
+  <div id="explorerView" role="main" aria-live="polite"></div>
+
+  <!-- Pré-roll overlay -->
+  <div id="adOverlay" class="ad-overlay" aria-hidden="true" role="dialog" aria-label="Publicité">
+    <div class="ad-container" role="document" aria-label="Contenu publicité">
+      <iframe id="prerollFrame" src="about:blank" allow="autoplay; fullscreen" title="Pré-roll Ad"></iframe>
+      <button id="skipBtn" class="skip-btn" onclick="closeAd()" aria-label="Ignorer la publicité">Ignorer la pub</button>
+    </div>
+  </div>
+
+  <!-- Mini card removed as requested -->
+
+  <script>
+    /*******************************
+     * CONFIG
+     *******************************/
+    const AD_REDIRECT_URL = "https://www.revenuecpmgate.com/jhf4rw2iqm?key=7fbc359e784e5a84aaff45865b68dce4";
+    // If you have a server-side proxy to strip X-Frame-Options, put prefix here, e.g. "/ad-proxy?u="
+    const AD_PROXY_PREFIX = null;
+
+    // How long before skip button appears on overlay
+    const SKIP_DELAY_MS = 7000;
+
+    /*******************************
+     * Logging helper (localStorage)
+     *******************************/
+    function logAdEvent(action, extra = {}) {
+      try {
+        const logs = JSON.parse(localStorage.getItem('adLogs') || '[]');
+        logs.push({ action, extra, t: new Date().toISOString() });
+        // keep last 1000
+        while (logs.length > 1000) logs.shift();
+        localStorage.setItem('adLogs', JSON.stringify(logs));
+      } catch (e) { console.warn('logAdEvent error', e); }
+    }
+
+    function openInNewTab(url) {
+      try {
+        const a = document.createElement('a');
+        a.href = url;
+        a.target = '_blank';
+        a.rel = 'noopener noreferrer';
+        a.style.display = 'none';
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+        logAdEvent('open_new_tab', { url });
+      } catch (e) {
+        window.open(url, "_blank", "noopener,noreferrer");
+        logAdEvent('open_new_tab_fallback', { url, err: e && e.message });
+      }
+    }
+
+    function getLoadUrl(u) {
+      if (!u) return u;
+      if (AD_PROXY_PREFIX) return AD_PROXY_PREFIX + encodeURIComponent(u);
+      return u;
+    }
+
+    /*******************************
+     * Overlay behavior: when user clicks a post thumbnail,
+     * show overlay and LOAD ad immediately (user action triggered).
+     *******************************/
+    const overlay = document.getElementById('adOverlay');
+    const prerollFrame = document.getElementById('prerollFrame');
+    const skipBtn = document.getElementById('skipBtn');
+    let skipTimeout = null;
+    let adCallback = null;
+
+    function showAdAndLoadImmediate() {
+      overlay.style.display = 'flex';
+      overlay.setAttribute('aria-hidden','false');
+      skipBtn.style.display = 'none';
+      // Load ad into overlay iframe immediately (user-initiated)
+      const url = getLoadUrl(AD_REDIRECT_URL);
+      try {
+        prerollFrame.src = url;
+        logAdEvent('overlay_ad_load_attempt', { url });
+      } catch (e) {
+        console.warn('overlay load error', e);
+        // fallback: open in new tab
+        openInNewTab(AD_REDIRECT_URL);
+        logAdEvent('overlay_ad_load_error', { err: e && e.message });
+      }
+      // reveal skip after delay
+      clearTimeout(skipTimeout);
+      skipTimeout = setTimeout(() => { skipBtn.style.display = 'block'; }, SKIP_DELAY_MS);
+
+      // heuristic fallback: if iframe didn't set src or blocked, open new tab
+      setTimeout(() => {
+        try {
+          const cur = prerollFrame.getAttribute('src') || '';
+          if (!cur || cur === 'about:blank') {
+            logAdEvent('overlay_iframe_blocked', { attempted: url });
+            openInNewTab(AD_REDIRECT_URL);
+          } else {
+            logAdEvent('overlay_iframe_assumed_loaded', { url: cur });
+          }
+        } catch (e) {
+          console.warn('overlay fallback check error', e);
+        }
+      }, 1400);
+    }
+
+    function closeAd() {
+      overlay.style.display = 'none';
+      overlay.setAttribute('aria-hidden','true');
+      clearTimeout(skipTimeout);
+      prerollFrame.src = 'about:blank';
+      logAdEvent('overlay_closed');
+      // call adCallback after slight delay if exists (to resume media)
+      if (typeof adCallback === 'function') {
+        try { setTimeout(() => { adCallback(); adCallback = null; }, 120); } catch(e){}
+      }
+    }
+
+    // ESC to close
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') {
+        if (overlay.style.display === 'flex') closeAd();
+      }
+    });
+
+    /*******************************
+     * Posts loading & click wiring (kept from original)
+     *******************************/
+    let allData = [];
+
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
+    }
+
+    fetch("index.json")
+      .then(r => r.json())
+      .then(files => Promise.all(files.map(f => fetch(f).then(r => r.json()))))
+      .then(jsons => {
+        jsons.forEach(d => Array.isArray(d) ? allData.push(...d) : allData.push(d));
+        shuffle(allData);
+        displayExplorer(allData);
+      }).catch(err => {
+        console.error("Erreur chargement JSON:", err);
+        const ex = document.getElementById("explorerView");
+        ex.innerHTML = '<div style="color:#999;padding:20px;text-align:center">Pa kapab chaje kontni (index.json).</div>';
+      });
+
+    function filterSearch(val){
+      const txt = (val || "").toLowerCase();
+      const filtered = allData.filter(p =>
+        ((p.Catégorie || p.Categorie || p.category || "").toString().toLowerCase() === "poste") &&
+        (
+          (p.Texte||p.Bio||p.Info||"").toString().toLowerCase().includes(txt) ||
+          (p.Name||"").toString().toLowerCase().includes(txt) ||
+          (p.Description||p.Desc||"").toString().toLowerCase().includes(txt)
+        )
+      );
+      displayExplorer(filtered);
+    }
+
+    function displayExplorer(data){
+      const ex = document.getElementById("explorerView");
+      ex.innerHTML = "";
+      data.forEach((post) => {
+        if (((post.Catégorie||post.Categorie||"" )).toString().toLowerCase() !== "poste") return;
+
+        const card = document.createElement("div");
+        card.className = "post-card";
+
+        const ptext = document.createElement("div");
+        ptext.className = "post-text";
+        ptext.textContent = post.Texte || post.Bio || post.Info || "";
+        card.appendChild(ptext);
+
+        const title = document.createElement("div");
+        title.className = "post-name";
+        title.textContent = post.Name || "";
+        card.appendChild(title);
+
+        const mediaWrap = document.createElement("div");
+        mediaWrap.className = "media-wrap";
+
+        const thumbCon = document.createElement("div");
+        thumbCon.className = "post-thumb-container";
+
+        const thumbSrc = post["Url Thumb"] || post.Previously || post.image || post.thumb || "";
+        const img = document.createElement("img");
+        img.className = "post-thumb";
+        img.alt = post.Description || post.Name || "";
+        img.loading = "lazy";
+        img.src = thumbSrc || "https://via.placeholder.com/800x450?text=Preview";
+
+        thumbCon.appendChild(img);
+        mediaWrap.appendChild(thumbCon);
+        card.appendChild(mediaWrap);
+
+        const desc = document.createElement("div");
+        desc.className = "post-desc";
+        desc.textContent = post.Description || post.Desc || post.Texte || "";
+        card.appendChild(desc);
+
+        // WHEN USER CLICKS A POST THUMB: SHOW OVERLAY AND LOAD AD IMMEDIATELY
+        thumbCon.addEventListener("click", (ev) => {
+          ev.stopPropagation();
+          const src = post.Previously || post.video || post["Url Video"] || post["Url"] || post.image || post.media || "";
+          // set callback to play media after ad closed
+          adCallback = () => playMedia(src, thumbCon);
+          // show overlay and load ad immediately (user-initiated)
+          showAdAndLoadImmediate();
+        });
+
+        ex.appendChild(card);
+      });
+
+      displaySocialLinks();
+    }
+
+    function looksLikeVideo(src){
+      if (!src) return false;
+      try {
+        const url = src.toString().split('?')[0].toLowerCase();
+        if (/\.(mp4|webm|ogg|mov|mkv)$/.test(url)) return true;
+        if (src.includes("youtube.com") || src.includes("youtu.be") || src.includes("vimeo.com")) return true;
+      } catch(e){}
+      return false;
+    }
+
+    function normalizeYouTubeEmbed(src){
+      try {
+        if (src.includes("youtu.be/")) {
+          const id = src.split("youtu.be/")[1].split(/[?&]/)[0];
+          return "https://www.youtube.com/embed/" + id + "?autoplay=1&rel=0";
+        }
+        const u = new URL(src);
+        const vParam = u.searchParams.get('v');
+        if (vParam) return "https://www.youtube.com/embed/" + vParam + "?autoplay=1&rel=0";
+      } catch(e){}
+      return src;
+    }
+
+    function normalizeVimeoEmbed(src){
+      try {
+        const parts = src.split('/');
+        const id = parts.pop() || parts.pop();
+        return "https://player.vimeo.com/video/" + id + "?autoplay=1";
+      } catch(e){}
+      return src;
+    }
+
+    function adjustIFrameSize(iframe, container){
+      try {
+        const cw = container.clientWidth || iframe.clientWidth || Math.min(window.innerWidth, parseInt(getComputedStyle(container).maxWidth) || window.innerWidth);
+        const h = Math.round(cw * 9 / 16);
+        iframe.style.width = cw + "px";
+        iframe.style.height = h + "px";
+      } catch(e){}
+    }
+
+    function playMedia(src, container){
+      if (!src) return;
+      container.innerHTML = "";
+
+      const isVideo = looksLikeVideo(src);
+      if (isVideo){
+        if (src.includes("youtube.com") || src.includes("youtu.be")) {
+          const iframe = document.createElement("iframe");
+          iframe.src = normalizeYouTubeEmbed(src);
+          iframe.allow = "autoplay; fullscreen; picture-in-picture";
+          iframe.style.border = "none";
+          iframe.style.display = "block";
+          container.appendChild(iframe);
+          setTimeout(() => adjustIFrameSize(iframe, container), 60);
+        } else if (src.includes("vimeo.com")) {
+          const iframe = document.createElement("iframe");
+          iframe.src = normalizeVimeoEmbed(src);
+          iframe.allow = "autoplay; fullscreen; picture-in-picture";
+          iframe.style.border = "none";
+          iframe.style.display = "block";
+          container.appendChild(iframe);
+          setTimeout(() => adjustIFrameSize(iframe, container), 60);
+        } else {
+          const videoEl = document.createElement("video");
+          videoEl.src = src;
+          videoEl.controls = true;
+          videoEl.autoplay = true;
+          videoEl.playsInline = true;
+          videoEl.setAttribute("controlsList", "nodownload");
+          videoEl.style.display = "block";
+          videoEl.style.maxWidth = "100%";
+          videoEl.style.height = "auto";
+          videoEl.style.objectFit = "contain";
+          container.appendChild(videoEl);
+          videoEl.addEventListener('click', () => {
+            if (videoEl.paused) videoEl.play(); else videoEl.pause();
+          });
+        }
+      } else {
+        const imgEl = document.createElement("img");
+        imgEl.src = src;
+        imgEl.loading = "lazy";
+        imgEl.alt = "";
+        imgEl.style.display = "block";
+        imgEl.style.width = "auto";
+        imgEl.style.maxWidth = "100%";
+        imgEl.style.height = "auto";
+        imgEl.style.objectFit = "contain";
+        container.appendChild(imgEl);
+        imgEl.addEventListener('error', () => {
+          container.innerHTML = '<div style="color:#999;padding:12px;text-align:center">Imaj pa disponib</div>';
+        });
+      }
+    }
+
+    function displaySocialLinks(){
+      const c = document.getElementById("explorerView"),
+            s = document.createElement("div");
+      s.className = "social-section";
+      s.innerHTML = `
+        <a href="https://www.facebook.com/profile.php?id=61578852256333" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <i class="fab fa-facebook-f" aria-hidden="true"></i>
+        </a>
+        <a href="mailto:dhaitiadam@gmail.com" rel="noopener noreferrer" aria-label="Mail">
+          <i class="fas fa-envelope" aria-hidden="true"></i>
+        </a>
+        <a href="https://whatsapp.com/channel/0029Vb6WLps7oQhWrUlyPQ2m" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+          <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/adam_dhaiti/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <i class="fab fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="https://youtube.com/@adam_dhaiti?si=f_29jvZi6c1mJaBO" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
+          <i class="fab fa-youtube" aria-hidden="true"></i>
+        </a>
+      `;
+      const exists = Array.from(document.getElementsByClassName('social-section')).length;
+      if (!exists) c.appendChild(s);
+    }
+
+    // Expose logs getter for debugging / support (console)
+    window.getAdLogs = function() {
+      try { return JSON.parse(localStorage.getItem('adLogs') || '[]'); } catch(e) { return []; }
+    };
+
+    // End of script
+  </script>
+</body>
+  </html>
