--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     /*******************************
      * CONFIG
      *******************************/
-    const AD_REDIRECT_URL = "https://www.revenuecpmgate.com/jhf4rw2iqm?key=7fbc359e784e5a84aaff45865b68dce4";
+    const AD_REDIRECT_URL = "https://pantherinvincible.com/cdz2dffrd?key=5dc5b83c663fd8944f650feafdc6c600";
     // If you have a server-side proxy to strip X-Frame-Options, put prefix here, e.g. "/ad-proxy?u="
     const AD_PROXY_PREFIX = null;
 
