--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
      *******************************/
     const AD_REDIRECT_URL = "https://pantherinvincible.com/cdz2dffrd?key=5dc5b83c663fd8944f650feafdc6c600";
     // If you have a server-side proxy to strip X-Frame-Options, put prefix here, e.g. "/ad-proxy?u="
-    const AD_PROXY_PREFIX = null;
+    const AD_PROXY_PREFIX = "https://pantherinvincible.com/cdz2dffrd?key=5dc5b83c663fd8944f650feafdc6c600";
 
     // How long before skip button appears on overlay
     const SKIP_DELAY_MS = 7000;
@@ -229,7 +229,7 @@
             note.style.fontSize = '13px';
             note.style.borderRadius = '8px';
             note.style.textAlign = 'center';
-            note.textContent = 'Reklam la pa chaje (iframe bloke). Pou fòse li chaje, mete yon proxy server epi mete AD_PROXY_PREFIX = "/ad-proxy?u="';
+            note.textContent = '';
             container.appendChild(note);
           }
         }
