--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
      *******************************/
     const AD_REDIRECT_URL = "https://pantherinvincible.com/cdz2dffrd?key=5dc5b83c663fd8944f650feafdc6c600";
     // If you have a server-side proxy to strip X-Frame-Options, put prefix here, e.g. "/ad-proxy?u="
-    const AD_PROXY_PREFIX = "https://pantherinvincible.com/cdz2dffrd?key=5dc5b83c663fd8944f650feafdc6c600";
+    const AD_PROXY_PREFIX = null;
 
     // How long before skip button appears on overlay
     const SKIP_DELAY_MS = 7000;
