--- a/index.html
+++ b/index.html
@@ -485,5 +485,14 @@
 
     // End of script
   </script>
+  <script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('SW registered:', reg.scope))
+      .catch(err => console.warn('SW register failed:', err));
+  });
+}
+  </script>
 </body>
   </html>
